c++: parenthesized -> resolving to static member [PR98283]

Here we're neglecting to propagate parenthesized-ness when the member
access expression (this->m) resolves to a static member (and thus
finish_class_member_access_expr yields a VAR_DECL instead of a
COMPONENT_REF).

Bootstrapped and regtested on x86_64-pc-linux-gnu, does look OK for
trunk?

	PR c++/98283

gcc/cp/ChangeLog:

	* pt.cc (tsubst_copy_and_build) <case COMPONENT_REF>: Use
	force_paren_expr on the result of finish_class_member_access_expr
	if REF_PARENTHESIZED_P.

gcc/testsuite/ChangeLog:

	* g++.dg/cpp1y/paren6.C: New test.